--- a/.github/workflows/check-versionist.yml
+++ b/.github/workflows/check-versionist.yml
@@ -16,4 +16,5 @@ jobs:
         cd $DIRECTORY
     - name: Start is-meta-pr
       run: |
+        export DEBUG=true
         bash ../scripts/ci-checks/is-meta-pr.sh
