--- a/.github/workflows/version-ci.yml
+++ b/.github/workflows/version-ci.yml
@@ -24,7 +24,7 @@ jobs:
         git add .
         git config --local user.email "$github_email"
         git config --local user.name "$github_username"
-        sudo git commit -m "v$VERSION" -a
+        sudo git commit -m "v$VERSION" -m "Change-type patch" -a
       env:
         github_email: ${{ secrets.GITHUB_EMAIL }}
         github_username: ${{ secrets.GITHUB_USERNAME }}
