--- a/config.json
+++ b/config.json
@@ -4,11 +4,11 @@
   "change-type": true,
   "change-type-fixed-spelling": false,
   "imperative-mood": false,
-  "no-leading-space-in-subject": true,
+  "no-leading-space-in-subject": false,
   "no-period": false,
-  "no-tag-in-body": true,
+  "no-tag-in-body": false,
   "no-whitespace-in-prefix": false,
-  "pretty-tags": true,
+  "pretty-tags": false,
   "proper-paragraphs": false,
   "signature-last": false,
   "signed-off-commits": false,
