--- a/.github/workflows/check-versionist.yml
+++ b/.github/workflows/check-versionist.yml
@@ -17,5 +17,5 @@ jobs:
         cd $DIRECTORY
     - name: Start resin-commit-lint
       run: |
-        commit=$(git show $SHA -s --format=%B)
+        commit=$(git show $(git rev-parse --verify HEAD) -s --format=%B)
         resin-commit-lint "${commit}" -c ../config.json
